base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic
spec:
  path: /
  to:
    kind: Service
    name: petclinic
  port:
    targetPort: 8080
